--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="card">
-      <img
-        src="/images/image-qr-code.png"
-        alt="qr-code"
-        width="100px"
-        height="100px"
-      />
-      <div class="card__text">
-        <h2>Improve your front-end skills by building projects</h2>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <div class="container">
+      <div class="card">
+        <img
+          src="/images/image-qr-code.png"
+          alt="qr-code"
+          width="100px"
+          height="100px"
+        />
+        <div class="card__text">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
     </div>
   </body>
