add css in folder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
