--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/style.css" type="text/css" />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="card">
         <img
-          src="/images/image-qr-code.png"
+          src="./images/image-qr-code.png"
           alt="qr-code"
           width="100px"
           height="100px"
