--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
         <img
           src="./images/image-qr-code.png"
           alt="qr-code"
-          width="100px"
-          height="100px"
+          width="100"
+          height="100"
         />
         <div class="card__text">
-          <h2>Improve your front-end skills by building projects</h2>
-          <p>
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
+          <header>
+            <h1>Improve your front-end skills by building projects</h1>
+          </header>
+          <main>
+            <p>
+              Scan the QR code to visit Frontend Mentor and take your coding
+              skills to the next level
+            </p>
+          </main>
         </div>
       </div>
     </div>
