--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <img
           src="./images/image-qr-code.png"
@@ -32,18 +32,14 @@
           width="100"
           height="100"
         />
-        <div class="card__text">
-          <header>
+        <section class="card__text">
             <h1>Improve your front-end skills by building projects</h1>
-          </header>
-          <main>
             <p>
               Scan the QR code to visit Frontend Mentor and take your coding
               skills to the next level
             </p>
-          </main>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
